@@ -23,11 +23,7 @@ public interface InventoryMapper {
 
     default List<InventorySummaryDto> toSummaryDtoList(List<Inventory> inventories) {
         if (inventories == null) return null;
-        return inventories.stream().map(this::toSummaryDto).collect(Collectors.toList());
+        return inventories.stream().map(this::toSummaryDto).toList();
     }
-    // helper used by services if needed to map a single inventory
-//    default Integer calcAvailable(Inventory inv) {
-//        if (inv == null) return 0;
-//        return inv.getQtyOnHand() - inv.getQtyReserved();
-//    }
+
 }
